--- a/css/layouts/responsive-sidebars.css
+++ b/css/layouts/responsive-sidebars.css
@@ -116,16 +116,16 @@
   .sidebar-first #content {
     /* Span 2 columns, starting in 2nd column from left. */
     float: left;
-    width: 50%;
-    margin-left: 20%;
-    margin-right: -70%;
+    width: 62.5%;
+    margin-left: 25%;
+    margin-right: -87.5%;
   }
   .sidebar-first .region-sidebar-first {
     /* Span 1 column, starting in 1st column from left. */
     float: left;
-    width: 20%;
+    width: 25%;
     margin-left: 0%;
-    margin-right: -20%;
+    margin-right: -25%;
   }
 
   /*
@@ -134,16 +134,16 @@
   .sidebar-second #content {
     /* Span 2 columns, starting in 1st column from left. */
     float: left;
-    width: 20%;
+    width: 25%;
     margin-left: 0%;
-    margin-right: -20%;
+    margin-right: -25%;
   }
   .sidebar-second .region-sidebar-second {
     /* Span 1 column, starting in 3rd column from left. */
     float: left;
-    width: 10%;
-    margin-left: 20%;
-    margin-right: -30%;
+    width: 12.5%;
+    margin-left: 25%;
+    margin-right: -37.5%;
   }
 
   /*
@@ -152,25 +152,23 @@
   .two-sidebars #content {
     /* Span 2 columns, starting in 2nd column from left. */
     float: left;
-    width: 30%;
-    margin-left: 60%;
-    margin-right: -90%;
+    width: 50%;
+    margin-left: 25%;
+    margin-right: -75%;
   }
   .two-sidebars .region-sidebar-first {
     /* Span 1 column, starting in 1st column from left. */
     float: left;
-    width: 10%;
+    width: 25%;
     margin-left: 0%;
-    margin-right: -10%;
-    background: orange;
+    margin-right: -25%;
   }
   .two-sidebars .region-sidebar-second {
     /* Start a new row and span all 3 columns. */
     float: left;
-    width: 30%;
-    margin-left: 50%;
-    margin-right: -80%;
-    background: red;
+    width: 25%;
+    margin-left: 75%;
+    margin-right: -100%;
   }
 }
 /*
@@ -186,16 +184,16 @@
   .sidebar-first #content {
     /* Span 4 columns, starting in 2nd column from left. */
     float: left;
-    width: 80%;
-    margin-left: 20%;
-    margin-right: -100%;
+    width: 33.33333%;
+    margin-left: 8.33333%;
+    margin-right: -41.66667%;
   }
   .sidebar-first .region-sidebar-first {
     /* Span 1 column, starting in 1st column from left. */
     float: left;
-    width: 20%;
+    width: 8.33333%;
     margin-left: 0%;
-    margin-right: -20%;
+    margin-right: -8.33333%;
   }
 
   /*
@@ -204,40 +202,40 @@
   .sidebar-second #content {
     /* Span 4 columns, starting in 1st column from left. */
     float: left;
-    width: 80%;
+    width: 33.33333%;
     margin-left: 0%;
-    margin-right: -80%;
+    margin-right: -33.33333%;
   }
   .sidebar-second .region-sidebar-second {
     /* Span 1 column, starting in 5th column from left. */
     float: left;
-    width: 20%;
-    margin-left: 80%;
-    margin-right: -100%;
+    width: 8.33333%;
+    margin-left: 33.33333%;
+    margin-right: -41.66667%;
   }
 
   /*
   * The layout when there are two sidebars.
   */
   .two-sidebars #content {
-    /* Span 3 columns, starting in 2nd column from left. */
+    /* Span 6 columns, starting in 4th column from left. */
     float: left;
-    width: 60%;
-    margin-left: 20%;
-    margin-right: -80%;
+    width: 50%;
+    margin-left: 25%;
+    margin-right: -75%;
   }
   .two-sidebars .region-sidebar-first {
-    /* Span 1 column, starting in 1st column from left. */
+    /* Span 3 column, starting in 1st column from left. */
     float: left;
-    width: 20%;
+    width: 25%;
     margin-left: 0%;
-    margin-right: -20%;
+    margin-right: -25%;
   }
   .two-sidebars .region-sidebar-second {
-    /* Span 1 column, starting in 5th column from left. */
+    /* Span 3 column, starting in 10th column from left. */
     float: left;
-    width: 20%;
-    margin-left: 80%;
+    width: 25%;
+    margin-left: 75%;
     margin-right: -100%;
   }
 }
