--- a/sass/normalize.scss
+++ b/sass/normalize.scss
@@ -1,7 +1,48 @@
+/* normalize.css v2.0.1 | MIT License | git.io/normalize */
+/* normalize.scss v2.0.1 | MIT/GPLv2 License | bit.ly/normalize-with-compass */
+
+// Import your project's _base.scss partial. See Compass best practices for more
+// info. http://compass-style.org/help/tutorials/best_practices/
 @import "base";
 
 
-/*! normalize.css v2.0.1 | MIT License | git.io/normalize */
+// =============================================================================
+// Variables and Imports
+//
+// If you have a base partial, you should move these lines to your base partial.
+// =============================================================================
+
+// The base font size.
+$base-font-size: 16px !default; // Overrides default set in Vertical Rhythm partial.
+
+// The base line height determines the basic unit of vertical rhythm.
+// $base-line-height: 24px; // Overrides default set in Vertical Rhythm partial.
+
+// The font sizes for h1-h6. You should set these variables in your base partial.
+$h1-font-size: 2    * $base-font-size !default;
+$h2-font-size: 1.5  * $base-font-size !default;
+$h3-font-size: 1.17 * $base-font-size !default;
+$h4-font-size: 1    * $base-font-size !default;
+$h5-font-size: 0.83 * $base-font-size !default;
+$h6-font-size: 0.75 * $base-font-size !default;
+
+// Setting this to false will result in smaller output, but no support for ie6 hacks.
+// $legacy-support-for-ie6: true; // Overrides default set in Support partial.
+
+// Setting this to false will result in smaller output, but no support for ie7 hacks.
+// $legacy-support-for-ie7: true; // Overrides default set in Support partial.
+
+// The default font family. You should set $base-font-family in your base partial.
+$base-font-family: sans-serif !default;
+
+// The amount lists and blockquotes are indented.
+$indent-amount: 40px !default;
+
+// After the default variables are set, import the required Compass partials.
+@import "compass/support";
+@import "compass/css3/box-sizing";
+@import "compass/typography/vertical_rhythm";
+
 
 /* ==========================================================================
    HTML5 display definitions
@@ -33,6 +74,10 @@ audio,
 canvas,
 video {
     display: inline-block;
+    @if $legacy-support-for-ie6 or $legacy-support-for-ie7 {
+        *display: inline;
+        *zoom: 1;
+    }
 }
 
 /*
@@ -61,12 +106,31 @@ audio:not([controls]) {
  * 1. Sets default font family to sans-serif.
  * 2. Prevents iOS text size adjust after orientation change, without disabling
  *    user zoom.
+ * 3. Corrects text resizing oddly in IE 6/7 when body `font-size` is set using
+ *    `em` units.
  */
 
 html {
     font-family: $base-font-family; /* 1 */
+    font-size: 100% * ($base-font-size / 16px); /* 3 */
     -webkit-text-size-adjust: 100%; /* 2 */
     -ms-text-size-adjust: 100%; /* 2 */
+    /* Establishes a vertical rhythm unit using $base-line-height. */
+    @include adjust-leading-to(1);
+}
+
+@if $legacy-support-for-ie6 or $legacy-support-for-ie7 {
+    /*
+     * Addresses `font-family` inconsistency between `textarea` and other form
+     * elements in IE 6/7.
+     */
+
+    button,
+    input,
+    select,
+    textarea {
+        font-family: $base-font-family;
+    }
 }
 
 /*
@@ -103,12 +167,61 @@ a:hover {
    ========================================================================== */
 
 /*
+ * Sets 1 unit of vertical rhythm on the top and bottom margin.
+ */
+
+p,
+pre {
+    margin: rhythm(1) 0;
+}
+
+blockquote {
+    /* Sets 1 unit of vertical rhythm on the top and bottom margin. */
+    margin: rhythm(1) $indent-amount;
+}
+
+/*
  * Addresses `h1` font sizes within `section` and `article` in Firefox 4+,
  * Safari 5, and Chrome.
  */
 
 h1 {
-    font-size: 2em;
+    /* Sets the font-size and line-height while keeping a proper vertical rhythm. */
+    @include adjust-font-size-to( $h1-font-size );
+
+    /* Sets 1 unit of vertical rhythm on the top and bottom margins. */
+    @include leader(1, $h1-font-size);
+    @include trailer(1, $h1-font-size);
+}
+
+h2 {
+    @include adjust-font-size-to( $h2-font-size );
+    @include leader(1, $h2-font-size);
+    @include trailer(1, $h2-font-size);
+}
+
+h3 {
+    @include adjust-font-size-to( $h3-font-size );
+    @include leader(1, $h3-font-size);
+    @include trailer(1, $h3-font-size);
+}
+
+h4 {
+    @include adjust-font-size-to( $h4-font-size );
+    @include leader(1, $h4-font-size);
+    @include trailer(1, $h4-font-size);
+}
+
+h5 {
+    @include adjust-font-size-to( $h5-font-size );
+    @include leader(1, $h5-font-size);
+    @include trailer(1, $h5-font-size);
+}
+
+h6 {
+    @include adjust-font-size-to( $h6-font-size );
+    @include leader(1, $h6-font-size);
+    @include trailer(1, $h6-font-size);
 }
 
 /*
@@ -145,7 +258,6 @@ mark {
     color: #000;
 }
 
-
 /*
  * Corrects font family set oddly in Safari 5 and Chrome.
  */
@@ -155,7 +267,10 @@ kbd,
 pre,
 samp {
     font-family: monospace, serif;
-    font-size: 1em;
+    @if $legacy-support-for-ie6 {
+        _font-family: 'courier new', monospace;
+    }
+    @include adjust-font-size-to( 1 * $base-font-size );
 }
 
 /*
@@ -205,6 +320,42 @@ sub {
 }
 
 /* ==========================================================================
+   Lists
+   ========================================================================== */
+
+/*
+ * Set 1 unit of vertical rhythm and a consistent indentation.
+ */
+
+dl,
+menu,
+ol,
+ul {
+    margin: rhythm(1) 0;
+    padding: 0 0 0 $indent-amount;
+}
+
+dl {
+    padding: 0;
+}
+
+dd {
+    margin: 0 0 0 $indent-amount;
+}
+
+@if $legacy-support-for-ie7 {
+    /*
+     * Corrects list images handled incorrectly in IE 7.
+     */
+
+    nav ul,
+    nav ol {
+        list-style: none;
+        list-style-image: none;
+    }
+}
+
+/* ==========================================================================
    Embedded content
    ========================================================================== */
 
@@ -214,6 +365,10 @@ sub {
 
 img {
     border: 0;
+    @if $legacy-support-for-ie7 {
+        /* Improves image quality when scaled in IE 7. */
+        -ms-interpolation-mode: bicubic;
+    }
 }
 
 /*
@@ -240,30 +395,49 @@ figure {
    Forms
    ========================================================================== */
 
+@if $legacy-support-for-ie6 or $legacy-support-for-ie7 {
+    /*
+     * Corrects margin displayed oddly in IE 6/7.
+     */
+
+    form {
+        margin: 0;
+    }
+}
+
 /*
  * Define consistent border, margin, and padding.
  */
 
 fieldset {
-    border: 1px solid #c0c0c0;
+    border-color: #c0c0c0;
     margin: 0 2px;
-    padding: 0.35em 0.625em 0.75em;
+    /* Apply borders and padding that keep the vertical rhythm. */
+    @include apply-side-rhythm-border(top,    $width: 1px, $lines: 0.35);
+    @include apply-side-rhythm-border(bottom, $width: 1px, $lines: 0.65);
+    @include apply-side-rhythm-border(left,  $width: 1px, $lines: 0.625);
+    @include apply-side-rhythm-border(right, $width: 1px, $lines: 0.625);
 }
 
 /*
  * 1. Corrects color not being inherited in IE 8/9.
  * 2. Remove padding so people aren't caught out if they zero out fieldsets.
+ * 3. Corrects alignment displayed oddly in IE 6/7.
  */
 
 legend {
     border: 0; /* 1 */
     padding: 0; /* 2 */
+    @if $legacy-support-for-ie6 or $legacy-support-for-ie7 {
+        *margin-left: -7px; /* 3 */
+    }
 }
 
 /*
  * 1. Corrects font family not being inherited in all browsers.
  * 2. Corrects font size not being inherited in all browsers.
  * 3. Addresses margins set differently in Firefox 4+, Safari 5, and Chrome
+ * 4. Improves appearance and consistency with IE 6/7.
  */
 
 button,
@@ -273,6 +447,10 @@ textarea {
     font-family: inherit; /* 1 */
     font-size: 100%; /* 2 */
     margin: 0; /* 3 */
+    @if $legacy-support-for-ie6 or $legacy-support-for-ie7 {
+        vertical-align: baseline; /* 4 */
+        *vertical-align: middle; /* 4 */
+    }
 }
 
 /*
@@ -291,6 +469,8 @@ input {
  * 2. Corrects inability to style clickable `input` types in iOS.
  * 3. Improves usability and consistency of cursor style between image-type
  *    `input` and others.
+ * 4. Removes inner spacing in IE 7 without affecting normal text inputs.
+ *    Known issue: inner spacing remains in IE 6.
  */
 
 button,
@@ -299,6 +479,9 @@ input[type="reset"],
 input[type="submit"] {
     -webkit-appearance: button; /* 2 */
     cursor: pointer; /* 3 */
+    @if $legacy-support-for-ie7 {
+        *overflow: visible; /* 4 */
+    }
 }
 
 /*
@@ -313,12 +496,18 @@ input[disabled] {
 /*
  * 1. Addresses box sizing set to `content-box` in IE 8/9.
  * 2. Removes excess padding in IE 8/9.
+ * 3. Removes excess padding in IE 7.
+ *    Known issue: excess padding remains in IE 6.
  */
 
 input[type="checkbox"],
 input[type="radio"] {
-    box-sizing: border-box; /* 1 */
+    @include box-sizing(border-box); /* 1 */
     padding: 0; /* 2 */
+    @if $legacy-support-for-ie7 {
+        *height: 13px; /* 3 */
+        *width: 13px; /* 3 */
+    }
 }
 
 /*
@@ -329,9 +518,7 @@ input[type="radio"] {
 
 input[type="search"] {
     -webkit-appearance: textfield; /* 1 */
-    -moz-box-sizing: content-box;
-    -webkit-box-sizing: content-box; /* 2 */
-    box-sizing: content-box;
+    @include box-sizing(content-box); /* 2 */
 }
 
 /*
