--- a/css/normalize.css
+++ b/css/normalize.css
@@ -8,6 +8,7 @@
  * from a user. The effect of this class can be toggled with the jQuery show()
  * and hide() functions.
  */
+/* line 91, ../sass/_custom.scss */
 .element-hidden {
   display: none;
 }
@@ -20,6 +21,7 @@
  * manner should be kept concise, to avoid unnecessary burden on the user.
  * "!important" is used to prevent unintentional overrides.
  */
+/* line 103, ../sass/_custom.scss */
 .element-invisible {
   position: absolute !important;
   clip: rect(1px 1px 1px 1px);
@@ -31,6 +33,7 @@
  * The .element-focusable class extends the .element-invisible class to allow
  * the element to be focusable when navigated to via the keyboard.
  */
+/* line 114, ../sass/_custom.scss */
 .element-invisible.element-focusable:active,
 .element-invisible.element-focusable:focus {
   position: static !important;
@@ -43,6 +46,7 @@
 /*
  * Corrects `block` display not defined in IE 8/9.
  */
+/* line 65, ../sass/normalize.scss */
 article,
 aside,
 details,
@@ -60,6 +64,7 @@ summary {
 /*
  * Corrects `inline-block` display not defined in IE 8/9.
  */
+/* line 75, ../sass/normalize.scss */
 audio,
 canvas,
 video {
@@ -70,6 +75,7 @@ video {
  * Prevents modern browsers from displaying `audio` without controls.
  * Remove excess height in iOS 5 devices.
  */
+/* line 88, ../sass/normalize.scss */
 audio:not([controls]) {
   display: none;
   height: 0;
@@ -78,6 +84,7 @@ audio:not([controls]) {
 /*
  * Addresses styling for `hidden` attribute not present in IE 8/9.
  */
+/* line 97, ../sass/normalize.scss */
 [hidden] {
   display: none;
 }
@@ -92,6 +99,7 @@ audio:not([controls]) {
  * 3. Corrects text resizing oddly in IE 6/7 when body `font-size` is set using
  *    `em` units.
  */
+/* line 113, ../sass/normalize.scss */
 html {
   font-family: Helvetica, Arial, "Nimbus Sans L", sans-serif;
   /* 1 */
@@ -108,6 +116,7 @@ html {
 /*
  * Removes default margin.
  */
+/* line 140, ../sass/normalize.scss */
 body {
   margin: 0;
 }
@@ -118,6 +127,7 @@ body {
 /*
  * Addresses `outline` inconsistency between Chrome and other browsers.
  */
+/* line 152, ../sass/normalize.scss */
 a:focus {
   outline: thin dotted;
 }
@@ -125,6 +135,7 @@ a:focus {
 /*
  * Improves readability when focused and also mouse hovered in all browsers.
  */
+/* line 161, ../sass/normalize.scss */
 a:active,
 a:hover {
   outline: 0;
@@ -136,11 +147,13 @@ a:hover {
 /*
  * Sets 1 unit of vertical rhythm on the top and bottom margin.
  */
+/* line 174, ../sass/normalize.scss */
 p,
 pre {
   margin: 1.5em 0;
 }
 
+/* line 178, ../sass/normalize.scss */
 blockquote {
   /* Sets 1 unit of vertical rhythm on the top and bottom margin. */
   margin: 1.5em 30px;
@@ -150,6 +163,7 @@ blockquote {
  * Addresses `h1` font sizes within `section` and `article` in Firefox 4+,
  * Safari 5, and Chrome.
  */
+/* line 188, ../sass/normalize.scss */
 h1 {
   /* Sets the font-size and line-height while keeping a proper vertical rhythm. */
   font-size: 2em;
@@ -159,6 +173,7 @@ h1 {
   margin-bottom: 0.75em;
 }
 
+/* line 197, ../sass/normalize.scss */
 h2 {
   font-size: 1.5em;
   line-height: 2em;
@@ -166,6 +181,7 @@ h2 {
   margin-bottom: 1em;
 }
 
+/* line 203, ../sass/normalize.scss */
 h3 {
   font-size: 1.17em;
   line-height: 1.28205em;
@@ -173,6 +189,7 @@ h3 {
   margin-bottom: 1.28205em;
 }
 
+/* line 209, ../sass/normalize.scss */
 h4 {
   font-size: 1em;
   line-height: 1.5em;
@@ -180,6 +197,7 @@ h4 {
   margin-bottom: 1.5em;
 }
 
+/* line 215, ../sass/normalize.scss */
 h5 {
   font-size: 0.83em;
   line-height: 1.80723em;
@@ -187,6 +205,7 @@ h5 {
   margin-bottom: 1.80723em;
 }
 
+/* line 221, ../sass/normalize.scss */
 h6 {
   font-size: 0.75em;
   line-height: 2em;
@@ -197,6 +216,7 @@ h6 {
 /*
  * Addresses styling not present in IE 8/9, Safari 5, and Chrome.
  */
+/* line 231, ../sass/normalize.scss */
 abbr[title] {
   border-bottom: 1px dotted;
 }
@@ -204,6 +224,7 @@ abbr[title] {
 /*
  * Addresses style set to `bolder` in Firefox 4+, Safari 5, and Chrome.
  */
+/* line 240, ../sass/normalize.scss */
 b,
 strong {
   font-weight: bold;
@@ -212,6 +233,7 @@ strong {
 /*
  * Addresses styling not present in Safari 5 and Chrome.
  */
+/* line 248, ../sass/normalize.scss */
 dfn {
   font-style: italic;
 }
@@ -219,6 +241,7 @@ dfn {
 /*
  * Addresses styling not present in IE 8/9.
  */
+/* line 256, ../sass/normalize.scss */
 mark {
   background: #ff0;
   color: #000;
@@ -227,6 +250,7 @@ mark {
 /*
  * Corrects font family set oddly in Safari 5 and Chrome.
  */
+/* line 268, ../sass/normalize.scss */
 code,
 kbd,
 pre,
@@ -239,6 +263,7 @@ samp {
 /*
  * Improves readability of pre-formatted text in all browsers.
  */
+/* line 280, ../sass/normalize.scss */
 pre {
   white-space: pre;
   white-space: pre-wrap;
@@ -248,6 +273,7 @@ pre {
 /*
  * Sets consistent quote types.
  */
+/* line 290, ../sass/normalize.scss */
 q {
   quotes: "\201C" "\201D" "\2018" "\2019";
 }
@@ -255,6 +281,7 @@ q {
 /*
  * Addresses inconsistent and variable font size in all browsers.
  */
+/* line 298, ../sass/normalize.scss */
 small {
   font-size: 80%;
 }
@@ -262,6 +289,7 @@ small {
 /*
  * Prevents `sub` and `sup` affecting `line-height` in all browsers.
  */
+/* line 307, ../sass/normalize.scss */
 sub,
 sup {
   font-size: 75%;
@@ -270,10 +298,12 @@ sup {
   vertical-align: baseline;
 }
 
+/* line 314, ../sass/normalize.scss */
 sup {
   top: -0.5em;
 }
 
+/* line 318, ../sass/normalize.scss */
 sub {
   bottom: -0.25em;
 }
@@ -284,6 +314,7 @@ sub {
 /*
  * Set 1 unit of vertical rhythm and a consistent indentation.
  */
+/* line 333, ../sass/normalize.scss */
 dl,
 menu,
 ol,
@@ -292,10 +323,12 @@ ul {
   padding: 0 0 0 30px;
 }
 
+/* line 338, ../sass/normalize.scss */
 dl {
   padding: 0;
 }
 
+/* line 342, ../sass/normalize.scss */
 dd {
   margin: 0 0 0 30px;
 }
@@ -306,6 +339,7 @@ dd {
 /*
  * Removes border when inside `a` element in IE 8/9.
  */
+/* line 366, ../sass/normalize.scss */
 img {
   border: 0;
 }
@@ -313,6 +347,7 @@ img {
 /*
  * Corrects overflow displayed oddly in IE 9.
  */
+/* line 378, ../sass/normalize.scss */
 svg:not(:root) {
   overflow: hidden;
 }
@@ -323,6 +358,7 @@ svg:not(:root) {
 /*
  * Addresses margin not present in IE 8/9 and Safari 5.
  */
+/* line 390, ../sass/normalize.scss */
 figure {
   margin: 0;
 }
@@ -333,6 +369,7 @@ figure {
 /*
  * Define consistent border, margin, and padding.
  */
+/* line 412, ../sass/normalize.scss */
 fieldset {
   border-color: #c0c0c0;
   margin: 0 2px;
@@ -356,6 +393,7 @@ fieldset {
  * 2. Remove padding so people aren't caught out if they zero out fieldsets.
  * 3. Corrects alignment displayed oddly in IE 6/7.
  */
+/* line 428, ../sass/normalize.scss */
 legend {
   border: 0;
   /* 1 */
@@ -369,6 +407,7 @@ legend {
  * 3. Addresses margins set differently in Firefox 4+, Safari 5, and Chrome
  * 4. Improves appearance and consistency with IE 6/7.
  */
+/* line 446, ../sass/normalize.scss */
 button,
 input,
 select,
@@ -385,6 +424,7 @@ textarea {
  * Addresses Firefox 4+ setting `line-height` on `input` using `!important` in
  * the UA stylesheet.
  */
+/* line 462, ../sass/normalize.scss */
 button,
 input {
   line-height: normal;
@@ -399,6 +439,7 @@ input {
  * 4. Removes inner spacing in IE 7 without affecting normal text inputs.
  *    Known issue: inner spacing remains in IE 6.
  */
+/* line 479, ../sass/normalize.scss */
 button,
 html input[type="button"],
 input[type="reset"],
@@ -412,6 +453,7 @@ input[type="submit"] {
 /*
  * Re-set default cursor for disabled elements.
  */
+/* line 492, ../sass/normalize.scss */
 button[disabled],
 input[disabled] {
   cursor: default;
@@ -423,6 +465,7 @@ input[disabled] {
  * 3. Removes excess padding in IE 7.
  *    Known issue: excess padding remains in IE 6.
  */
+/* line 504, ../sass/normalize.scss */
 input[type="checkbox"],
 input[type="radio"] {
   -webkit-box-sizing: border-box;
@@ -438,6 +481,7 @@ input[type="radio"] {
  * 2. Addresses `box-sizing` set to `border-box` in Safari 5 and Chrome
  *    (include `-moz` to future-proof).
  */
+/* line 519, ../sass/normalize.scss */
 input[type="search"] {
   -webkit-appearance: textfield;
   /* 1 */
@@ -451,6 +495,7 @@ input[type="search"] {
  * Removes inner padding and search cancel button in Safari 5 and Chrome
  * on OS X.
  */
+/* line 530, ../sass/normalize.scss */
 input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
@@ -459,6 +504,7 @@ input[type="search"]::-webkit-search-decoration {
 /*
  * Removes inner padding and border in Firefox 4+.
  */
+/* line 539, ../sass/normalize.scss */
 button::-moz-focus-inner,
 input::-moz-focus-inner {
   border: 0;
@@ -469,6 +515,7 @@ input::-moz-focus-inner {
  * 1. Removes default vertical scrollbar in IE 8/9.
  * 2. Improves readability and alignment in all browsers.
  */
+/* line 549, ../sass/normalize.scss */
 textarea {
   overflow: auto;
   /* 1 */
@@ -482,6 +529,7 @@ textarea {
 /*
  * Remove most spacing between table cells.
  */
+/* line 562, ../sass/normalize.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
