--- a/css/layouts/fixed-width.css
+++ b/css/layouts/fixed-width.css
@@ -16,6 +16,7 @@
  * from a user. The effect of this class can be toggled with the jQuery show()
  * and hide() functions.
  */
+/* line 91, ../../sass/_custom.scss */
 .element-hidden {
   display: none;
 }
@@ -28,6 +29,7 @@
  * manner should be kept concise, to avoid unnecessary burden on the user.
  * "!important" is used to prevent unintentional overrides.
  */
+/* line 103, ../../sass/_custom.scss */
 .element-invisible {
   position: absolute !important;
   clip: rect(1px 1px 1px 1px);
@@ -39,6 +41,7 @@
  * The .element-focusable class extends the .element-invisible class to allow
  * the element to be focusable when navigated to via the keyboard.
  */
+/* line 114, ../../sass/_custom.scss */
 .element-invisible.element-focusable:active,
 .element-invisible.element-focusable:focus {
   position: static !important;
@@ -48,6 +51,7 @@
 /*
  * Center the page.
  */
+/* line 43, ../../sass/layouts/fixed-width.scss */
 #page,
 .region-bottom {
   /* If you want to make the page a fixed width and centered in the viewport,
@@ -60,6 +64,7 @@
 /*
  * Apply the shared properties of grid items in a single, efficient ruleset.
  */
+/* line 61, ../../sass/layouts/fixed-width.scss */
 #header,
 #content,
 #navigation,
@@ -75,6 +80,7 @@
 /*
  * Containers for grid items and flow items.
  */
+/* line 52, ../../../../../../../../Library/Ruby/Gems/1.8/gems/zen-grids-1.2/stylesheets/zen/_grids.scss */
 #header:before, #header:after,
 #main:before,
 #main:after,
@@ -83,6 +89,7 @@
   content: "";
   display: table;
 }
+/* line 56, ../../../../../../../../Library/Ruby/Gems/1.8/gems/zen-grids-1.2/stylesheets/zen/_grids.scss */
 #header:after,
 #main:after,
 #footer:after {
@@ -92,12 +99,14 @@
 /*
  * Navigation bar
  */
+/* line 79, ../../sass/layouts/fixed-width.scss */
 #main {
   padding-top: 3em;
   /* Move all the children of #main down to make room. */
   position: relative;
 }
 
+/* line 83, ../../sass/layouts/fixed-width.scss */
 #navigation {
   position: absolute;
   top: 0;
@@ -109,6 +118,7 @@
 /*
  * The layout when there is only one sidebar, the left one.
  */
+/* line 95, ../../sass/layouts/fixed-width.scss */
 .sidebar-first #content {
   /* Span 4 columns, starting in 2nd column from left. */
   float: left;
@@ -116,6 +126,7 @@
   margin-left: 196px;
   margin-right: -980px;
 }
+/* line 99, ../../sass/layouts/fixed-width.scss */
 .sidebar-first .region-sidebar-first {
   /* Span 1 column, starting in 1st column from left. */
   float: left;
@@ -127,6 +138,7 @@
 /*
  * The layout when there is only one sidebar, the right one.
  */
+/* line 109, ../../sass/layouts/fixed-width.scss */
 .sidebar-second #content {
   /* Span 4 columns, starting in 1st column from left. */
   float: left;
@@ -134,6 +146,7 @@
   margin-left: 0px;
   margin-right: -784px;
 }
+/* line 113, ../../sass/layouts/fixed-width.scss */
 .sidebar-second .region-sidebar-second {
   /* Span 1 column, starting in 5th column from left. */
   float: left;
@@ -145,6 +158,7 @@
 /*
  * The layout when there are two sidebars.
  */
+/* line 123, ../../sass/layouts/fixed-width.scss */
 .two-sidebars #content {
   /* Span 3 columns, starting in 2nd column from left. */
   float: left;
@@ -152,6 +166,7 @@
   margin-left: 196px;
   margin-right: -784px;
 }
+/* line 127, ../../sass/layouts/fixed-width.scss */
 .two-sidebars .region-sidebar-first {
   /* Span 1 column, starting in 1st column from left. */
   float: left;
@@ -159,6 +174,7 @@
   margin-left: 0px;
   margin-right: -196px;
 }
+/* line 131, ../../sass/layouts/fixed-width.scss */
 .two-sidebars .region-sidebar-second {
   /* Span 1 column, starting in 5th column from left. */
   float: left;
