--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@
  * from a user. The effect of this class can be toggled with the jQuery show()
  * and hide() functions.
  */
+/* line 91, ../sass/_custom.scss */
 .element-hidden {
   display: none;
 }
@@ -26,6 +27,7 @@
  * manner should be kept concise, to avoid unnecessary burden on the user.
  * "!important" is used to prevent unintentional overrides.
  */
+/* line 103, ../sass/_custom.scss */
 .element-invisible {
   position: absolute !important;
   clip: rect(1px 1px 1px 1px);
@@ -37,6 +39,7 @@
  * The .element-focusable class extends the .element-invisible class to allow
  * the element to be focusable when navigated to via the keyboard.
  */
+/* line 114, ../sass/_custom.scss */
 .element-invisible.element-focusable:active,
 .element-invisible.element-focusable:focus {
   position: static !important;
@@ -47,9 +50,11 @@
  * The skip-link link will be completely hidden until a user tabs to the link.
  * See the element-focusable rule in system.base.css.
  */
+/* line 16, ../sass/style.scss */
 #skip-link {
   margin: 0;
 }
+/* line 20, ../sass/style.scss */
 #skip-link a,
 #skip-link a:visited {
   background-color: #666;
