--- a/sass/layouts/responsive-sidebars.scss
+++ b/sass/layouts/responsive-sidebars.scss
@@ -71,84 +71,76 @@ $zen-auto-include-item-base: false;
   @include zen-grid-container();
 }
 
+
 /*
- *  max-width: 480px
+ * Media queries and breakpoints
  */
+
+// 480 -
 @include breakpoint(break-small) {
+
 }
 
 
-/*
- *  min-width: 480px
- */
-@include breakpoint(break-any) {
-}
-
-
-/*
- *  min-width: 480px
- *  AND
- *  max-width: 959px
- */
-@include breakpoint(break-narrow) {
+// 480 - 768
+@include breakpoint(break-medium) {
 
   /*
-   * Use 3 grid columns for smaller screens.
+   * Use 8 grid columns for larger screens.
    */
   $zen-column-count: 8;
 
   /*
-   * The layout when there is only one sidebar, the left one.
-   */
+ * The layout when there is only one sidebar, the left one.
+ */
   .sidebar-first {
-    #content { /* Span 2 columns, starting in 2nd column from left. */
-      @include zen-grid-item(5, 3);
+    #content { /* Span 4 columns, starting in 4th column from left. */
+      @include zen-grid-item(5, 4);
     }
 
-    .region-sidebar-first { /* Span 1 column, starting in 1st column from left. */
-      @include zen-grid-item(2, 1);
+    .region-sidebar-first { /* Span 3 column, starting in 1st column from left. */
+      @include zen-grid-item(3, 1);
     }
   }
 
   /*
-   * The layout when there is only one sidebar, the right one.
-   */
+  * The layout when there is only one sidebar, the right one.
+  */
   .sidebar-second {
-    #content { /* Span 2 columns, starting in 1st column from left. */
-      @include zen-grid-item(2, 1);
+    #content { /* Span 5 columns, starting in 1st column from left. */
+      @include zen-grid-item(5, 1);
     }
 
-    .region-sidebar-second { /* Span 1 column, starting in 3rd column from left. */
-      @include zen-grid-item(1, 3);
+    .region-sidebar-second { /* Span 3 column, starting in 6th column from left. */
+      @include zen-grid-item(3, 6);
     }
   }
 
   /*
-   * The layout when there are two sidebars.
-   */
+  * The layout when there are two sidebars.
+  */
   .two-sidebars {
-    #content { /* Span 2 columns, starting in 2nd column from left. */
-      @include zen-grid-item(4, 3);
+    #content { /* Span 5 columns, starting in 4th column from left. */
+      @include zen-grid-item(5, 4);
     }
 
-    .region-sidebar-first { /* Span 1 column, starting in 1st column from left. */
-      @include zen-grid-item(2, 1);
+    .region-sidebar-first { /* Span 3 column, starting in 1st column from left. */
+      @include zen-grid-item(3, 1);
     }
 
-    .region-sidebar-second { /* Start a new row and span all 3 columns. */
-      @include zen-grid-item(2, 7);
+    .region-sidebar-second { /* Span 8 column, starting in 1st column from left under the others. */
+      @include zen-grid-item(8, 1);
+      @include zen-clear(left); // Clear left-floated elements
     }
   }
 }
 
 
-/*
- *  min-width: 959px
- */
-@include breakpoint(break-wide) {
+// 768 +
+@include breakpoint(break-large) {
 
   /*
-   * Use 5 grid columns for larger screens.
+   * Use 12 grid columns for larger screens.
    */
   $zen-column-count: 12;
 
@@ -156,12 +148,12 @@ $zen-auto-include-item-base: false;
    * The layout when there is only one sidebar, the left one.
    */
   .sidebar-first {
-    #content { /* Span 4 columns, starting in 2nd column from left. */
-      @include zen-grid-item(4, 2);
+    #content { /* Span 9 columns, starting in 4th column from left. */
+      @include zen-grid-item(9, 4);
     }
 
-    .region-sidebar-first { /* Span 1 column, starting in 1st column from left. */
-      @include zen-grid-item(1, 1);
+    .region-sidebar-first { /* Span 3 column, starting in 1st column from left. */
+      @include zen-grid-item(3, 1);
     }
   }
 
@@ -169,12 +161,12 @@ $zen-auto-include-item-base: false;
    * The layout when there is only one sidebar, the right one.
    */
   .sidebar-second {
-    #content { /* Span 4 columns, starting in 1st column from left. */
-      @include zen-grid-item(4, 1);
+    #content { /* Span 9 columns, starting in 1st column from left. */
+      @include zen-grid-item(9, 1);
     }
 
-    .region-sidebar-second { /* Span 1 column, starting in 5th column from left. */
-      @include zen-grid-item(1, 5);
+    .region-sidebar-second { /* Span 1 column, starting in 10th column from left. */
+      @include zen-grid-item(3, 10);
     }
   }
 
