--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -105,3 +105,6 @@ $indent-amount: 30px;
 @import "compass/typography/vertical_rhythm"; // Helps set up a vertical rhythm.
 @import "zen";              // Add the Zen Grids responsive layout mixins.
 @import "custom";           // Import our custom mixins last.
+
+
+@import "zen/background-grid";
